// Nexus AI Platform - Context-Aware Templates
// gRPC API для Nexus системы
// Автор: Биркин Максим
// Версия протокола: 1.0.0

syntax = "proto3";

package nexus;
option go_package = "nexus-full-protocol/api/proto";

// ============================================================================
// Constants
// ============================================================================

// Version версия протокола Nexus
// Формат: MAJOR.MINOR.PATCH (семантическое версионирование)
// MAJOR - несовместимые изменения API
// MINOR - обратно совместимые новые функции
// PATCH - обратно совместимые исправления ошибок

// ============================================================================
// Common Messages
// ============================================================================

// RequestMetadata метаданные запроса (стандартизированные для всех запросов)
message RequestMetadata {
  string request_id = 1;              // Уникальный ID запроса (UUID)
  string client_version = 2;           // Версия клиента (например, "1.0.0")
  string version = 3;                  // Версия протокола (например, "1.0.0")
  string client_id = 4;                // Идентификатор клиента
  string client_type = 5;             // Тип клиента (web, mobile, sdk, etc.)
  int64 timestamp = 6;                 // Unix timestamp запроса
  map<string, string> custom_headers = 7; // Кастомные заголовки
}

// ResponseMetadata метаданные ответа
message ResponseMetadata {
  string request_id = 1;               // ID запроса (из RequestMetadata)
  string server_version = 2;           // Версия сервера
  string version = 3;                  // Версия протокола
  int64 timestamp = 4;                 // Unix timestamp ответа
  int32 processing_time_ms = 5;        // Время обработки в миллисекундах
}

// ErrorDetail детальная информация об ошибке (для gRPC Status)
message ErrorDetail {
  string error_code = 1;               // Код ошибки (например, "VALIDATION_FAILED")
  string error_type = 2;               // Тип ошибки (например, "VALIDATION_ERROR")
  string message = 3;                  // Сообщение об ошибке
  string field = 4;                    // Поле, вызвавшее ошибку (если применимо)
  string details = 5;                  // Детальная информация
  map<string, string> metadata = 6;    // Дополнительные метаданные
}

message Location {
  double latitude = 1;
  double longitude = 2;
  double accuracy = 3;
}

message UserContext {
  string user_id = 1;
  string session_id = 2;
  string tenant_id = 3;
  repeated string roles = 4;
  Location location = 5;
}

message Action {
  string type = 1;
  string label = 2;
  string url = 3;
  string method = 4;
  string confirm_text = 5;
}

message ResultItem {
  string id = 1;
  string type = 2;
  string title = 3;
  string description = 4;
  map<string, string> data = 5;
  float relevance = 6;
  float confidence = 7;
  repeated Action actions = 8;
}

message DomainSection {
  string domain_id = 1;
  string title = 2;
  string status = 3;
  string error = 4;
  int32 response_time_ms = 5;
  repeated ResultItem results = 6;
}

message SearchResult {
  string title = 1;
  string url = 2;
  string snippet = 3;
  float relevance = 4;
}

message WebSearchResult {
  repeated SearchResult results = 1;
  string search_engine = 2;
  int32 total_results = 3;
}

message RankedItem {
  string id = 1;
  float score = 2;
  int32 rank = 3;
}

message RankingResult {
  repeated RankedItem items = 1;
  string algorithm = 2;
}

message ExecutionMetadata {
  int64 started_at = 1;
  int64 completed_at = 2;
  int64 total_time_ms = 3;
  map<string, int32> domain_stats = 4;
  int32 domains_executed = 5;
  int32 results_count = 6;
}

message ExecuteOptions {
  int32 timeout_ms = 1;
  int32 max_results_per_domain = 2;
  bool parallel_execution = 3;
  bool include_web_search = 4;
}

// ============================================================================
// Context-Aware Templates Service
// ============================================================================

message ExecuteTemplateRequest {
  string query = 1;
  string language = 2;
  UserContext context = 3;
  ExecuteOptions options = 4;
  RequestMetadata metadata = 5;        // Метаданные запроса (опционально)
}

message ExecuteTemplateResponse {
  string execution_id = 1;
  string intent_id = 2;
  string status = 3;
  string query_type = 4;
  repeated DomainSection sections = 5;
  WebSearchResult web_search = 6;
  RankingResult ranking = 7;
  ExecutionMetadata metadata = 8;
  int32 processing_time_ms = 9;
  ResponseMetadata response_metadata = 10; // Метаданные ответа
}

message GetExecutionStatusRequest {
  string execution_id = 1;
  RequestMetadata metadata = 2;        // Метаданные запроса (опционально)
}

message StreamTemplateRequest {
  string execution_id = 1;
  RequestMetadata metadata = 2;        // Метаданные запроса (опционально)
}

message TemplateResult {
  string execution_id = 1;
  string domain_id = 2;
  DomainSection section = 3;
}

service ContextAwareTemplates {
  rpc ExecuteTemplate(ExecuteTemplateRequest) returns (ExecuteTemplateResponse);
  rpc GetExecutionStatus(GetExecutionStatusRequest) returns (ExecuteTemplateResponse);
  rpc StreamTemplateResults(StreamTemplateRequest) returns (stream TemplateResult);
}

// ============================================================================
// IAM Service
// ============================================================================

message RegisterUserRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
  string tenant_id = 5;
}

message RegisterUserResponse {
  bool success = 1;
  string user_id = 2;
  string message = 3;
  string error = 4;
}

message AuthenticateUserRequest {
  string email = 1;
  string password = 2;
}

message AuthenticateUserResponse {
  bool success = 1;
  string access_token = 2;
  string refresh_token = 3;
  int32 expires_in = 4;
  UserProfile user = 5;
  string error = 6;
}

message UserProfile {
  string id = 1;
  string email = 2;
  string username = 3;
  string first_name = 4;
  string last_name = 5;
  string status = 6;
  repeated string roles = 7;
  int64 created_at = 8;
  int64 last_login_at = 9;
}

message GetUserProfileRequest {
  string user_id = 1;
}

message GetUserProfileResponse {
  UserProfile user = 1;
  string error = 2;
}

message UpdateUserProfileRequest {
  string user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string bio = 4;
}

message UpdateUserProfileResponse {
  bool success = 1;
  string message = 2;
  string error = 3;
}

service IAM {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  rpc AuthenticateUser(AuthenticateUserRequest) returns (AuthenticateUserResponse);
  rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse);
  rpc UpdateUserProfile(UpdateUserProfileRequest) returns (UpdateUserProfileResponse);
}

// ============================================================================
// Placeholder Services (for future implementation)
// ============================================================================

// Commerce service placeholder
service Commerce {}

// Knowledge service placeholder
service Knowledge {}
